--- a/orders-products-app/locales/en.json
+++ b/orders-products-app/locales/en.json
@@ -13,6 +13,7 @@
   "sidebar.stats.ordersTotal": "Total orders",
   "sidebar.stats.productsTotal": "Total products",
   "sidebar.statsTitle": "Statistics",
+  "sidebar.menu": "Menu",
   "sidebar.account": "Account",
   "sidebar.logout": "Log out",
   "sidebar.login": "Log in",
