--- a/orders-products-app/locales/uk.json
+++ b/orders-products-app/locales/uk.json
@@ -13,6 +13,7 @@
   "sidebar.stats.ordersTotal": "Всього замовлень",
   "sidebar.stats.productsTotal": "Всього продуктів",
   "sidebar.statsTitle": "Статистика",
+  "sidebar.menu": "Меню",
   "sidebar.account": "Обліковий запис",
   "sidebar.logout": "Вийти",
   "sidebar.login": "Увійти",
